fixed multi-select button spacing

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -66,6 +66,16 @@
   font-weight: 700;
 }
 
+.btn-group {
+  .btn:first-child:not(:last-child):not(.dropdown-toggle) {
+    right: -1px;
+  }
+  &:last-child {
+    left: -1px;
+  }
+
+}
+
 .btn-group-justified {
   .btn {
     // border-right-width: 0;
